--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Luis Araon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,11 +21,16 @@
 						<div class="inner">
 
 							<!-- Logo -->
+							<!--
 								<a href="index.html" class="logo">
-									<span class="title">Luis Aragon</span>
-										
-								</a>
+									<span><h1>Luis Aragon</h1></span>
+									<h2>  Data Science Portfolio</h2>
+								</a>-->
 
+								<div style="clear: both">
+										<a href="index.html" class="logo"><h2 style="float: left">Luis Aragon</h2></a>
+										<h3 style="float: right">Data Science Portfolio</h3>
+								</div>
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -65,6 +70,7 @@
 								</p>
 							<!--Image Sizes: 353 x 326-->
 							</header>
+	
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
